--- a/index.html
+++ b/index.html
@@ -11,49 +11,92 @@
 </head>
 <body>
   <main class="wrap">
-    <header class="header">
-      <h1>Todo List</h1>
-      <p class="subtitle">Stay organized and productive</p>
-    </header>
+    <section class="day" id="day-1">
+      <header class="header">
+        <h1>Day 1</h1>
+        <p class="subtitle">Stay organized and productive</p>
+      </header>
 
-    <section class="card">
-      <ul class="todo-list">
-        <li class="todo-item">
-          <label class="checkbox">
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <span class="task"><a href="https://www.youtube.com/live/JXeryAV8JNE" target="_blank">Rise Of Nationalism :></a></span>
-          </label>
-        </li>
-        <li class="todo-item">
-          <label class="checkbox">
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <span class="task"><a href="https://www.youtube.com/live/JXeryAV8JNE" target="_blank">Rise Of Nationalism :></a></span>
-          </label>
-        </li>
-        <li class="todo-item">
-          <label class="checkbox">
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <span class="task"><a href="https://www.youtube.com/watch?v=On56TWN81eg" target="_blank">Nelson Mandela :></a></span>
-          </label>
-        </li>
-        <li class="todo-item">
-          <label class="checkbox">
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <span class="task"><a href="https://www.youtube.com/watch?v=F8y66IbMs9w" target="_blank">A Letter To God :></a></span>
-          </label>
-        </li>
-        <li class="todo-item">
-          <label class="checkbox">
-            <input type="checkbox">
-            <span class="checkmark"></span>
-            <span class="task">Revise Nationalism Short Notes</span>
-          </label>
-        </li>
-      </ul>
+      <section class="card">
+        <ul class="todo-list">
+          <li class="todo-item">
+            <label class="checkbox">
+              <input type="checkbox">
+              <span class="checkmark"></span>
+              <span class="task"><a href="https://www.youtube.com/live/JXeryAV8JNE" target="_blank">Rise Of Nationalism</a></span>
+            </label>
+          </li>
+          <li class="todo-item">
+            <label class="checkbox">
+              <input type="checkbox">
+              <span class="checkmark"></span>
+              <span class="task"><a href="https://www.youtube.com/live/JXeryAV8JNE" target="_blank">Rise Of Nationalism</a></span>
+            </label>
+          </li>
+          <li class="todo-item">
+            <label class="checkbox">
+              <input type="checkbox">
+              <span class="checkmark"></span>
+              <span class="task"><a href="https://www.youtube.com/watch?v=On56TWN81eg" target="_blank">Nelson Mandela</a></span>
+            </label>
+          </li>
+          <li class="todo-item">
+            <label class="checkbox">
+              <input type="checkbox">
+              <span class="checkmark"></span>
+              <span class="task"><a href="https://www.youtube.com/watch?v=F8y66IbMs9w" target="_blank">Watch Nationalism Video</a></span>
+            </label>
+          </li>
+          <li class="todo-item">
+            <label class="checkbox">
+              <input type="checkbox">
+              <span class="checkmark"></span>
+              <span class="task">Revise Nationalism Short Notes</span>
+            </label>
+          </li>
+        </ul>
+      </section>
+    </section>
+
+    <section class="day" id="day-2">
+      <header class="header">
+        <h1>Day 2</h1>
+        
+      </header>
+
+      <section class="card">
+        <ul class="todo-list">
+          <li class="todo-item">
+            <label class="checkbox">
+              <input type="checkbox">
+              <span class="checkmark"></span>
+              <span class="task"><a href="https://youtu.be/vpvQ0UugbF8?si=l0--bdRMxJ053aNG" target="_blank">Real Number :></a></span>
+            </label>
+          </li>
+
+          <li class="todo-item">
+            <label class="checkbox">
+              <input type="checkbox">
+              <span class="checkmark"></span>
+              <span class="task"><a href="https://www.youtube.com/live/sUHHh9bcM74?si=iPHl9ouhjQJfNjmc" target="_blank">Resources and development :></a></span>
+            </label>
+          </li>
+          <li class="todo-item">
+            <label class="checkbox">
+              <input type="checkbox">
+              <span class="checkmark"></span>
+              <span class="task"><a href="https://www.youtube.com/watch?v=-bU5R0IfDsU&pp=ygUmZWR1aGFwIHNjaWVuY2Ugb25lIHNob3QgbGlmZSBwcm9jZXNzZXM%3D" target="_blank">Life Processes 🧬</a></span>
+            </label>
+          </li>
+          <li class="todo-item">
+            <label class="checkbox">
+              <input type="checkbox">
+              <span class="checkmark"></span>
+              <span class="task">revise nationalism shot notes</span>
+            </label>
+          </li>
+        </ul>
+      </section>
     </section>
   </main>
   <div class="emoji-container"></div>
